Mon Jul 20 10:55:18 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Addrinfo#family_addrinfo): fix a typo in
	  error message.  patch by Nobuhiro IMAI.  [ruby-dev:38828]

Sun Jul 19 22:22:54 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (float_to_r): an improvement.

Sun Jul 19 20:41:24 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (make_patterns): do not use \d.

	* rational.c (make_patterns): ditto.

Sun Jul 19 17:32:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_read): should taint the result.   [ruby-dev:38826]

Sun Jul 19 11:00:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (me_opts): fixed optimized method aliasing.
	  [ruby-dev:38824]

Sun Jul 19 10:54:56 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Socket.accept_loop): rescue
	  IO::WaitReadable instead of Errno::EWOULDBLOCK.
	  (Socket.udp_server_loop_on): ditto.

Sat Jul 18 23:44:59 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (reg_enc_error): use rb_enc_get to get the encoding of
	  a Regexp object. REGEXP(re)->ptr->enc is the encoding of the
	  regexp engin for patterns and target strings.
	  [ruby-core:23208]

Sat Jul 18 17:43:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_hash_cmp): got rid of overflow.

Sat Jul 18 16:03:01 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/defines.h (TRUE, FALSE): for internal use.

Sat Jul 18 11:39:49 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* random.c: workaround for VC++ 6.0.

Sat Jul 18 09:16:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (rb_random_{int32,real,bytes,int}): added functions for
	  extension libraries.

Sat Jul 18 09:07:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (fill_random_seed): use cryptographic service on Windows.

Sat Jul 18 07:56:00 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: fail to create a widget object for an unknown
	  wiget path. 
