@@ -1910,12 +1910,15 @@ if test x"$cross_compiling" = xyes; then
   test x"$MINIRUBY" = x && MINIRUBY="${RUBY-ruby} -I`pwd` "-r'$(arch)-fake'
   PREP='$(arch)-fake.rb'
   RUNRUBY='$(MINIRUBY) -I`cd $(srcdir)/lib; pwd`'
+  TEST_RUNNABLE=no
 else
   MINIRUBY='./miniruby$(EXEEXT) -I$(srcdir)/lib'
   MINIRUBY="$MINIRUBY"' -I$(EXTOUT)/common -I./- -r$(srcdir)/ext/purelib.rb'
   PREP='miniruby$(EXEEXT)'
   RUNRUBY='$(MINIRUBY) $(srcdir)/tool/runruby.rb --extout=$(EXTOUT)'
+  TEST_RUNNABLE=yes
 fi
+AC_SUBST(TEST_RUNNABLE)
 AC_SUBST(MINIRUBY)
 AC_SUBST(PREP)
 AC_SUBST(RUNRUBY)
