@@ -1,3 +1,10 @@
+Mon Jul 20 11:12:54 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* configure.in, Makefile.in (TEST_RUNNABLE): tests are no
+	  runnable if cross-compiling.
+
+	* common.mk (btest*, test*): ditto.
+
 Mon Jul 20 10:55:18 2009  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/lib/socket.rb (Addrinfo#family_addrinfo): fix a typo in
